# ether-ocr

./: .env.example  .gitignore  Justfile  Makefile  README.md  opencode.json
containers/: .dockerignore  Dockerfile  docker-compose.yml
docs/: ocr-contenedores.md
openapi/: ocr-api.yaml  ocr-mcp.yaml
python/: README.md  pyproject.toml
python/ether-api-ocr/: README.md  pyproject.toml
python/ether-api-ocr/src/ether_ocr_api/: __init__.py  auth.py  config.py  server.py
python/ether-api-ocr/src/ether_ocr_api/routes/: health.py  ocr.py  prepare.py
python/ether-api-ocr/src/ether_ocr_api/schemas/: health.py  ocr.py  prepare.py
python/ether-api-ocr/tests/: test_api.py
python/ether-cli-ocr/: README.md  pyproject.toml
python/ether-cli-ocr/src/ether_ocr_cli/: __init__.py  __main__.py  cli.py
python/ether-core-ocr/: README.md  pyproject.toml
python/ether-core-ocr/src/ether_ocr_core/: __init__.py  cleaner.py  ocr.py  pipeline.py  preparer.py  validator.py
python/ether-core-ocr/tests/: test_cleaner.py  test_ocr.py  test_pipeline.py  test_preparer.py  test_validator.py
python/ether-mcp-ocr/: README.md  pyproject.toml
python/ether-mcp-ocr/src/ether_ocr_mcp/: __init__.py  client.py  server.py  tools.py
python/src/ether_ocr/: __init__.py  __main__.py  cleaner.py  cli.py  extractor.py  ocr.py  pipeline.py  preparer.py  validator.py
python/src/ether_ocr/api/: __init__.py  auth.py  server.py
python/src/ether_ocr/api/routes/: health.py  ocr.py  prepare.py
python/src/ether_ocr/api/schemas/: health.py  ocr.py  prepare.py
python/tests/: test_api.py  test_cleaner.py  test_ocr.py  test_pipeline.py  test_preparer.py  test_validator.py
scripts/just/: dev.just  docker.just
scripts/mk/: docker.mk
scripts/python/: api.py  build.py  lint.py  ocr.py  test.py
scripts/shellscript/: docker-build.sh  docker-push.sh  docker-run.sh  entrypoint.sh  setup.sh
spec-native/: ARCHITECTURE.md  COMMANDS.md  CONVENTIONS.md  DECISIONS.md  PRODUCT.md  ROADMAP.md  SESSION.md  STACK.md  TRACEABILITY.md
spec-native/specs/ocr-engine/: SPEC.md
spec-native/specs/pdf-to-rag-text/: SPEC.md
spec-native/specs/rest-api/: SPEC.md
spec-native/tasks/ocr-engine/: TASKS.md
spec-native/tasks/pdf-to-rag-text/: TASKS.md
spec-native/tasks/rest-api/: TASKS.md
tests/: generate_pdf.py  pyproject.toml  validate_api.py  validate_container.py  validate_mcp.py
