[project]
name = "ether-ocr"
version = "0.2.0"
description = "OCR engine and document preparation tools for RAG ingestion."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3",
    "pdf2image>=1.17",
    "pillow>=10",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.18",
]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "black>=24",
    "isort>=5",
    "httpx>=0.28",
]

[project.scripts]
ether-ocr = "ether_ocr.cli:main"
ether-ocr-api = "ether_ocr.api.server:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
