[project]
name = "ether-ocr-tests"
version = "0.1.0"
description = "Validadores de integracion para ether-ocr — API REST y contenedor CLI"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
]

[project.scripts]
validate-api = "validate_api:main"
validate-container = "validate_container:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []
