[project]
name = "ether-core-ocr"
version = "0.3.0"
description = "OCR engine and document preparation tools for RAG ingestion."
requires-python = ">=3.11"
dependencies = [
    "pytesseract>=0.3",
    "pdf2image>=1.17",
    "pillow>=10",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
